Tweak asset margins to fix header spacing

--- a/static/style.css
+++ b/static/style.css
@@ -88,6 +88,14 @@ body, html {
 
 /* stuff */
 
+.asset h3 {
+    margin-top: 0;
+}
+
+.asset {
+    margin-bottom: 1.14em;
+}
+
 .asset .meta, .comment .meta {
     font-size: 0.9em;
     line-height: 0.9em;
